fixed overflowing search icon

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -50,6 +50,7 @@ h1 {
   button {
     padding: 8px;
     position: absolute;
+    height: 100%;
     right: 0;
     cursor: pointer;
     &:hover {
